--- a/pset0/index.html
+++ b/pset0/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS50W — Project 0</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <header>
@@ -13,14 +15,20 @@
         <p>Project 0: Search</p>
     </header>
 
-    <main>
+    <main class="container">
         <nav>
             <ul>
                 <li><a href="images.html">Images Search</a></li>
                 <li><a href="advanced.html">Advanced Search</a></li>
             </ul>
         </nav>
+        <form action="https://www.google.com/search" method="get">
+            <input type="text" name="q" autofocus>
+            <button type="submit">Google Search</button>
+        </form>
+
     </main>
 
 </body>
+
 </html>
