Retitle images.html for Google Image Search

--- a/pset0/images.html
+++ b/pset0/images.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS50W — Project 0: Search</title>
+    <title>CS50W — Project 0: Image Search</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="header-inner">
             <div class="branding">
                 <h1 class="site-title">CS50W — Project 0</h1>
-                <p class="site-subtitle">Search</p>
+                <p class="site-subtitle">Image Search</p>
             </div>
             <nav class="header-nav" aria-label="Project links">
                 <a href="images.html">Images</a>
@@ -23,7 +23,7 @@
 
     <main class="search-main">
         <section class="search-panel" aria-labelledby="search-heading">
-            <h2 id="search-heading" class="sr-only">Web search</h2>
+            <h2 id="search-heading" class="sr-only">Image search</h2>
 
             <form action="https://www.google.com/search" method="get" class="search-form">
                 <label for="search-input" class="sr-only">Search query</label>
@@ -34,7 +34,7 @@
                         name="q"
                         autocomplete="off"
                         required
-                        placeholder="Search the web..."
+                        placeholder="Search for images..."
                     >
                 </div>
 
@@ -47,7 +47,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>CS50W · Project 0: Search</p>
+        <p>CS50W · Project 0: Image Search</p>
     </footer>
 
 </body>
