Highlight navigation link for active page

--- a/pset0/images.html
+++ b/pset0/images.html
@@ -17,7 +17,8 @@
                 <p class="site-subtitle">Image Search</p>
             </div>
             <nav class="header-nav" aria-label="Project links">
-                <a href="images.html">Images</a>
+                <a href="index.html">Search</a>
+                <a href="images.html"  class="active">Images</a>
                 <a href="advanced.html">Advanced</a>
             </nav>
         </div>
