--- a/pset0/index.html
+++ b/pset0/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS50W — Project 0: Search</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <header class="site-header">
@@ -15,9 +17,11 @@
                 <p class="site-subtitle">Search</p>
             </div>
             <nav class="header-nav" aria-label="Project links">
+                <a href="index.html" class="active">Search</a>
                 <a href="images.html">Images</a>
                 <a href="advanced.html">Advanced</a>
             </nav>
+
         </div>
     </header>
 
@@ -28,14 +32,8 @@
             <form action="https://www.google.com/search" method="get" class="search-form">
                 <label for="search-input" class="sr-only">Search query</label>
                 <div class="search-input-wrapper">
-                    <input
-                        id="search-input"
-                        type="text"
-                        name="q"
-                        autocomplete="off"
-                        required
-                        placeholder="Search the web..."
-                    >
+                    <input id="search-input" type="text" name="q" autocomplete="off" required
+                        placeholder="Search the web...">
                 </div>
 
                 <div class="search-actions">
@@ -51,4 +49,5 @@
     </footer>
 
 </body>
+
 </html>
